Added classes for reading files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,13 @@
 include_directories("${PROJECT_BINARY_DIR}")
 
+set(SOURCE
+  ${CMAKE_CURRENT_SOURCE_DIR}/Main.cpp
+)
+
 add_subdirectory(programOptions)
 
 #Add the executable
-add_executable(CuEira ${PROJECT_SOURCE_DIR}/src/Main.cpp)
+add_executable(CuEira ${SOURCE} ${HEADERS})
 
 #Link
 TARGET_LINK_LIBRARIES( CuEira ${Boost_LIBRARIES} ${CUDA_LIBRARIES} )
