--- a/src/programOptions/CMakeLists.txt
+++ b/src/programOptions/CMakeLists.txt
@@ -1,1 +1,13 @@
 include_directories("${PROJECT_BINARY_DIR}")
+
+set(SOURCE
+  ${SOURCE}
+  ${CMAKE_CURRENT_SOURCE_DIR}/Configuration.cpp
+  PARENT_SCOPE
+)
+
+set(HEADERS
+  ${HEADERS}
+  ${CMAKE_CURRENT_SOURCE_DIR}/Configuration.h
+  PARENT_SCOPE
+)
