--- a/src/programOptions/CMakeLists.txt
+++ b/src/programOptions/CMakeLists.txt
@@ -1,4 +1,8 @@
-include_directories("${PROJECT_BINARY_DIR}")
+set(INCLUDE_DIRECTORIES
+  ${INCLUDE_DIRECTORIES}
+  ${CMAKE_CURRENT_SOURCE_DIR}
+  PARENT_SCOPE
+)
 
 set(SOURCE
   ${SOURCE}
