--- a/src/data/CMakeLists.txt
+++ b/src/data/CMakeLists.txt
@@ -1,5 +1,3 @@
-add_subdirectory(plink)
-
 set(INCLUDE_DIRECTORIES
   ${INCLUDE_DIRECTORIES}
   ${CMAKE_CURRENT_SOURCE_DIR}
@@ -8,10 +6,14 @@ set(INCLUDE_DIRECTORIES
 
 set(SOURCE
   ${SOURCE}
+  ${CMAKE_CURRENT_SOURCE_DIR}/Id.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/SNP.cpp
   PARENT_SCOPE
 )
 
 set(HEADERS
   ${HEADERS}
+  ${CMAKE_CURRENT_SOURCE_DIR}/Id.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/SNP.h
   PARENT_SCOPE
 )
