Added phenotypcoding, added phenotype to person, added phenotype enum, added phenotype reading to fam reader, added stub for phenotype coding option, made some exceptions clearer

--- a/src/data/CMakeLists.txt
+++ b/src/data/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCE
   ${SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/Id.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/SNP.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Person.h
   PARENT_SCOPE
 )
 
@@ -15,5 +16,6 @@ set(HEADERS
   ${HEADERS}
   ${CMAKE_CURRENT_SOURCE_DIR}/Id.h
   ${CMAKE_CURRENT_SOURCE_DIR}/SNP.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/Person.h
   PARENT_SCOPE
 )
