--- a/src/data/CMakeLists.txt
+++ b/src/data/CMakeLists.txt
@@ -8,7 +8,7 @@ set(SOURCE
   ${SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/Id.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/SNP.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/Person.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/Person.cpp
   PARENT_SCOPE
 )
 
