--- a/src/fileIO/plink/CMakeLists.txt
+++ b/src/fileIO/plink/CMakeLists.txt
@@ -7,11 +7,15 @@ set(INCLUDE_DIRECTORIES
 set(SOURCE
   ${SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/BimReader.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/BedReader.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/FamReader.cpp
   PARENT_SCOPE
 )
 
 set(HEADERS
   ${HEADERS}
   ${CMAKE_CURRENT_SOURCE_DIR}/BimReader.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/BedReader.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/FamReader.h
   PARENT_SCOPE
 )
