--- a/src/container/CMakeLists.txt
+++ b/src/container/CMakeLists.txt
@@ -8,6 +8,8 @@ set(SOURCE
   ${SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/HostVector.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/HostMatrix.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/PinnedHostVector.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/PinnedHostMatrix.cpp
   PARENT_SCOPE
 )
 
@@ -15,5 +17,23 @@ set(HEADERS
   ${HEADERS}
   ${CMAKE_CURRENT_SOURCE_DIR}/HostVector.h
   ${CMAKE_CURRENT_SOURCE_DIR}/HostMatrix.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/PinnedHostVector.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/PinnedHostMatrix.h
   PARENT_SCOPE
 )
+
+if(${CPU})
+  set(SOURCE
+    ${SOURCE}
+    ${CMAKE_CURRENT_SOURCE_DIR}/LapackppHostVector.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/LapackppHostMatrix.cpp
+    PARENT_SCOPE
+  )
+
+  set(HEADERS
+    ${HEADERS}
+    ${CMAKE_CURRENT_SOURCE_DIR}/LapackppHostVector.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/LapackppHostMatrix.h
+    PARENT_SCOPE
+  )
+endif(${CPU})
