--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,9 @@
+add_subdirectory(data)
+add_subdirectory(exception)
+#add_subdirectory(container)
+add_subdirectory(programOptions)
+#add_subdirectory(fileIO)
+
 set(INCLUDE_DIRECTORIES
   ${INCLUDE_DIRECTORIES}
   ${CMAKE_CURRENT_SOURCE_DIR}
@@ -5,18 +11,10 @@ set(INCLUDE_DIRECTORIES
 )
 
 set(SOURCE
-  ${CMAKE_CURRENT_SOURCE_DIR}/Main.cpp
+  ${SOURCE}
+  #${CMAKE_CURRENT_SOURCE_DIR}/Main.cpp
 )
 
-add_subdirectory(data)
-add_subdirectory(exception)
-#add_subdirectory(container)
-add_subdirectory(programOptions)
-#add_subdirectory(fileIO)
-
-#Add the executable
-add_executable(CuEira ${SOURCE} ${HEADERS})
 include_directories(${INCLUDE_DIRECTORIES})
 
-#Link
-TARGET_LINK_LIBRARIES( CuEira ${Boost_LIBRARIES} ${CUDA_LIBRARIES} )
+add_library(${CUEIRA_LIB} SHARED ${SOURCE})
