--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,15 +1,18 @@
+add_subdirectory(data)
+
 set(TEST_INCLUDE_DIRECTORIES
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${gtest_SOURCE_DIR}/include
+  ${gmock_SOURCE_DIR}/include
+  PARENT_SCOPE
 )
 
-set(TEST_HEADERS
+set(TEST_SOURCE
   
 )
 
-add_subdirectory(data)
-
 include_directories(${TEST_INCLUDE_DIRECTORIES})
 
-add_executable(tests ${TEST_HEADERS})
-target_link_libraries(tests gtest_main)
+add_executable(CuEira_Test ${TEST_SOURCE})
+target_link_libraries(CuEira_Test gmock gtest gtest_main gmock_main ${Boost_LIBRARIES} ${CUDA_LIBRARIES})
+add_test(CuEira_Test ${CMAKE_CURRENT_BINARY_DIR}/CuEira_Test)
