--- a/test/data/CMakeLists.txt
+++ b/test/data/CMakeLists.txt
@@ -4,8 +4,8 @@ set(TEST_INCLUDE_DIRECTORIES
   PARENT_SCOPE
 )
 
-set(TEST_HEADERS
-  ${TEST_HEADERS}
-  ${CMAKE_CURRENT_SOURCE_DIR}/PersonHandlerTest.h
+set(TEST_SOURCE
+  ${TEST_SOURCE}
+  ${CMAKE_CURRENT_SOURCE_DIR}/PersonHandlerTest.cpp
   PARENT_SCOPE
 )
