Implemented some tests for PersonHandler and implemmented operator < for id and person

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,10 +85,8 @@ add_subdirectory(gmock-1.7.0)
 add_subdirectory(src)
 include_directories(${INCLUDE_DIRECTORIES})
 
-#Add executable
+#Add executable and link
 add_executable(CuEira ${CMAKE_CURRENT_SOURCE_DIR}/src/Main.cpp)
-
-#Link
 TARGET_LINK_LIBRARIES(CuEira ${CUEIRA_LIB} ${Boost_LIBRARIES} ${CUDA_LIBRARIES} )
 
 #Tests
@@ -97,9 +95,7 @@ include_directories(${TEST_INCLUDE_DIRECTORIES})
 
 add_executable(CuEira_Test ${TEST_SOURCE})
 target_link_libraries(CuEira_Test ${CUEIRA_LIB} gmock gtest gtest_main gmock_main ${Boost_LIBRARIES} ${CUDA_LIBRARIES})
-#add_test(CuEira_Test ${CMAKE_CURRENT_BINARY_DIR}/CuEira_Test)
-
-
+add_test(CuEira_Test ${CMAKE_CURRENT_BINARY_DIR}/CuEira_Test)
 
 #Check if bumblbee is used
 #if(tests are enabled)
