--- a/src/data/CMakeLists.txt
+++ b/src/data/CMakeLists.txt
@@ -9,5 +9,6 @@ set(SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/Id.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/SNP.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/Person.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/PersonHandler.cpp
   PARENT_SCOPE
 )
