--- a/src/fileIO/plink/CMakeLists.txt
+++ b/src/fileIO/plink/CMakeLists.txt
@@ -6,8 +6,8 @@ set(INCLUDE_DIRECTORIES
 
 set(SOURCE
   ${SOURCE}
-  #${CMAKE_CURRENT_SOURCE_DIR}/BimReader.cpp
-  #${CMAKE_CURRENT_SOURCE_DIR}/BedReader.cpp
-  #${CMAKE_CURRENT_SOURCE_DIR}/FamReader.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/BimReader.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/BedReader.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/FamReader.cpp
   PARENT_SCOPE
 )
