--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,6 +13,7 @@ set(TEST_INCLUDE_DIRECTORIES
 set(TEST_SOURCE
   ${TEST_SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/ConstructorHelpers.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/ConfigurationMock.h
   PARENT_SCOPE
 )
 
