Implemented parts of FamReaderTest. Added mock for PersonHandler

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,4 @@
+add_subdirectory(mocks)
 add_subdirectory(data)
 add_subdirectory(container)
 add_subdirectory(fileIO)
@@ -13,7 +14,6 @@ set(TEST_INCLUDE_DIRECTORIES
 set(TEST_SOURCE
   ${TEST_SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/ConstructorHelpers.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/ConfigurationMock.h
   PARENT_SCOPE
 )
 
