--- a/test/mocks/CMakeLists.txt
+++ b/test/mocks/CMakeLists.txt
@@ -6,7 +6,7 @@ set(TEST_INCLUDE_DIRECTORIES
 
 set(TEST_SOURCE
   ${TEST_SOURCE}
-  #${CMAKE_CURRENT_SOURCE_DIR}/PersonHandlerMock.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/PersonHandlerMock.h
   ${CMAKE_CURRENT_SOURCE_DIR}/ConfigurationMock.h
   PARENT_SCOPE
 )
