--- a/src/container/CMakeLists.txt
+++ b/src/container/CMakeLists.txt
@@ -7,7 +7,7 @@ set(INCLUDE_DIRECTORIES
 if(${CPU})
   set(CPU_SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/LapackppHostVector.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/LapackppHostMatrix.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/LapackppHostMatrix.cpp
   )
 endif(${CPU})
 
@@ -15,7 +15,7 @@ set(SOURCE
   ${SOURCE}
   ${CPU_SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/HostVector.cpp
-  #${CMAKE_CURRENT_SOURCE_DIR}/HostMatrix.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/HostMatrix.cpp
   #${CMAKE_CURRENT_SOURCE_DIR}/PinnedHostVector.cpp
   #${CMAKE_CURRENT_SOURCE_DIR}/PinnedHostMatrix.cpp
   PARENT_SCOPE
