--- a/test/container/CMakeLists.txt
+++ b/test/container/CMakeLists.txt
@@ -7,5 +7,6 @@ set(TEST_INCLUDE_DIRECTORIES
 set(TEST_SOURCE
   ${TEST_SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/LapackppHostVectorTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/LapackppHostMatrixTest.cpp
   PARENT_SCOPE
 )
