Added skeleton for CSVReader test

--- a/test/fileIO/CMakeLists.txt
+++ b/test/fileIO/CMakeLists.txt
@@ -8,6 +8,7 @@ set(TEST_INCLUDE_DIRECTORIES
 
 set(TEST_SOURCE
   ${TEST_SOURCE}
+  ${CMAKE_CURRENT_SOURCE_DIR}/CSVReaderTest.cpp
   PARENT_SCOPE
 )
 
