Added positon to SNP and added tests for it

--- a/test/fileIO/CMakeLists.txt
+++ b/test/fileIO/CMakeLists.txt
@@ -9,6 +9,7 @@ set(TEST_INCLUDE_DIRECTORIES
 set(TEST_SOURCE
   ${TEST_SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/CSVReaderTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/FileIOIntegrationTest.cpp
   PARENT_SCOPE
 )
 
