Added skeleton for SNPVectorTest. Implemented more tests for SNP that tests the allele freqs

--- a/test/container/CMakeLists.txt
+++ b/test/container/CMakeLists.txt
@@ -8,5 +8,6 @@ set(TEST_SOURCE
   ${TEST_SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/LapackppHostVectorTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/LapackppHostMatrixTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/SNPVectorTest.cpp
   PARENT_SCOPE
 )
