Added first parts for CUDA. Fixed error in PersonHandler. Removed SimpleLogisticRegression since it's not needed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,18 +11,17 @@ set (CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(INCLUDE_DIRECTORIES
   ${PROJECT_BINARY_DIR}
-  ${gtest_SOURCE_DIR}/include
-  ${gmock_SOURCE_DIR}/include
 )
 set(Boost_USE_STATIC_LIBS OFF) 
 set(Boost_USE_MULTITHREADED OFF)
 set(CUEIRA_LIB CuEira_Core)
+set(CUEIRA_GPU_LIB CuEira_GPU)
 
 #Options
 option(VERBOSE "Set CMake and compilation to verbose" on) #FIXME Change to off later
 set(PRECISION single) #single or double
 set(TARGET_ARCHITECTURE fermi) #fermi or kepler
-set(CPU on) #FIXME Change to of later
+set(CPU off) #FIXME Change to of later
 
 #Set things based on options
 if(${VERBOSE})
@@ -40,6 +39,7 @@ MESSAGE( STATUS "Building CuEira:" )
 #Set preproccessor variables
 add_definitions(-DCuEira_VERSION_MAJOR=${CuEira_VERSION_MAJOR})
 add_definitions(-DCuEira_VERSION_MINOR=${CuEira_VERSION_MINOR})
+add_definitions(-DCUDA_CALLABLE_FUNCTION="__device__ __host__")
 
 #FIXME later
 #IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
@@ -59,8 +59,7 @@ MESSAGE( STATUS "Checking packages:" )
 find_package( Boost 1.55 COMPONENTS program_options REQUIRED )
 include_directories( ${Boost_INCLUDE_DIR} )
 
-find_package( CUDA REQUIRED )
-include_directories( ${CUDA_INCLUDE_DIR} )
+
 
 if(${CPU})
   set(LAPACKPP_INCLUDE_DIR /usr/local/include/lapackpp/)
@@ -68,17 +67,24 @@ if(${CPU})
   add_definitions(-llapackpp)
   add_definitions(-lgfortran)
   include_directories( ${LAPACKPP_INCLUDE_DIR} )
-endif(${CPU})
+else()
+  find_package( CUDA REQUIRED )
+  include_directories( ${CUDA_INCLUDE_DIRS} )
 
-#Checks that the CUDA version is correct
-if(${CUDA_VERSION_MAJOR} LESS 5)
-  message( FATAL_ERROR "Requires CUDA version 5.5 or later" )
-endif(${CUDA_VERSION_MAJOR} LESS 5)
-if(${CUDA_VERSION_MAJOR} EQUAL 5)
-  if(${CUDA_VERSION_MINOR} LESS 5)
+  #Checks that the CUDA version is correct
+  if(${CUDA_VERSION_MAJOR} LESS 5)
     message( FATAL_ERROR "Requires CUDA version 5.5 or later" )
-  endif(${CUDA_VERSION_MINOR} LESS 5)
-endif(${CUDA_VERSION_MAJOR} EQUAL 5)
+  endif(${CUDA_VERSION_MAJOR} LESS 5)
+  if(${CUDA_VERSION_MAJOR} EQUAL 5)
+    if(${CUDA_VERSION_MINOR} LESS 5)
+      message( FATAL_ERROR "Requires CUDA version 5.5 or later" )
+    endif(${CUDA_VERSION_MINOR} LESS 5)
+  endif(${CUDA_VERSION_MAJOR} EQUAL 5)
+
+  #Set somethings for CUDA compilation
+  set(CUDA_PROPAGATE_HOST_FLAGS off) #Some c++ flags that gets passed to NVCC -Xcompiler will cause errors, for instance c++11 flag 
+  #set()
+endif(${CPU})
 
 #Print some info
 MESSAGE( STATUS "change a configuration variable with: cmake -D<Variable>=<Value>" )
@@ -86,16 +92,23 @@ MESSAGE( STATUS "PRECISION = ${PRECISION}" )
 MESSAGE( STATUS "TARGET_ARCHITECTURE = ${TARGET_ARCHITECTURE}" )
 MESSAGE( STATUS "CMAKE_INSTALL_PREFIX = ${CMAKE_INSTALL_PREFIX}" )
 MESSAGE( STATUS "CMAKE_BUILD_TYPE = ${CMAKE_BUILD_TYPE}" )
-MESSAGE( STATUS "CUDA_CUBLAS_LIBRARIES = ${CUDA_CUBLAS_LIBRARIES}" )
-MESSAGE( STATUS "CUDA_INCLUDE_DIRS = ${CUDA_INCLUDE_DIRS}" )
 MESSAGE( STATUS "BOOST_PATH = ${Boost_INCLUDE_DIR}" )
 if(${CPU})
   MESSAGE( STATUS "LAPACKPP_INCLUDE_DIR = ${LAPACKPP_INCLUDE_DIR}" )
   MESSAGE( STATUS "BLAS_LIBRARIES = ${BLAS_LIBRARIES}" )
+else()
+  MESSAGE( STATUS "CUDA_CUBLAS_LIBRARIES = ${CUDA_CUBLAS_LIBRARIES}" )
+  MESSAGE( STATUS "CUDA_INCLUDE_DIRS = ${CUDA_INCLUDE_DIRS}" )
 endif(${CPU})
 
 #Add all sub dirs, the src sub dir will create librart ${CUEIRA_LIB} and set ${INCLUDE_DIRECTORIES}
 add_subdirectory(gmock-1.7.0)
+set(INCLUDE_DIRECTORIES
+  ${INCLUDE_DIRECTORIES}
+  ${gtest_SOURCE_DIR}/include
+  ${gmock_SOURCE_DIR}/include
+)
+
 add_subdirectory(src)
 include_directories(${INCLUDE_DIRECTORIES})
 
@@ -104,11 +117,13 @@ include_directories(${TEST_INCLUDE_DIRECTORIES})
 
 #Add executable and link
 add_executable(CuEira ${CMAKE_CURRENT_SOURCE_DIR}/src/Main.cpp)
-TARGET_LINK_LIBRARIES(CuEira ${CUEIRA_LIB} gmock gtest gtest_main gmock_main ${Boost_LIBRARIES} ${CUDA_LIBRARIES} ${BLAS_LIBRARIES})
+TARGET_LINK_LIBRARIES(CuEira ${CUEIRA_LIB} ${CUEIRA_GPU_LIB} gmock gtest gtest_main gmock_main ${Boost_LIBRARIES} ${CUDA_LIBRARIES} ${BLAS_LIBRARIES})
+#cuda_add_cublas_to_target(CuEira)
 
 #Tests
 add_executable(CuEira_Test ${TEST_SOURCE})
-target_link_libraries(CuEira_Test ${CUEIRA_LIB} gmock gtest gtest_main gmock_main ${Boost_LIBRARIES} ${CUDA_LIBRARIES} ${BLAS_LIBRARIES})
+target_link_libraries(CuEira_Test ${CUEIRA_LIB} ${CUEIRA_GPU_LIB} gmock gtest gtest_main gmock_main ${Boost_LIBRARIES} ${CUDA_LIBRARIES} ${BLAS_LIBRARIES})
+#cuda_add_cublas_to_target(CuEira_Test)
 add_test(CuEira_Test ${CMAKE_CURRENT_BINARY_DIR}/CuEira_Test)
 
 #Check if bumblbee is used
