--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,9 +4,11 @@ add_subdirectory(container)
 add_subdirectory(programOptions)
 add_subdirectory(fileIO)
 
-#if(${CPU})
-	add_subdirectory(serial)
-#endif(${CPU})
+if(${CPU})
+  add_subdirectory(serial)
+else()
+  add_subdirectory(cuda)
+endif(${CPU})
 
 
 set(INCLUDE_DIRECTORIES
@@ -19,6 +21,11 @@ set(SOURCE
   ${SOURCE}
 )
 
+set(GPU_SOURCE
+  ${GPU_SOURCE}
+)
+
 include_directories(${INCLUDE_DIRECTORIES})
 
 add_library(${CUEIRA_LIB} SHARED ${SOURCE})
+cuda_add_library(${CUEIRA_GPU_LIB} SHARED ${GPU_SOURCE})
