--- a/test/container/CMakeLists.txt
+++ b/test/container/CMakeLists.txt
@@ -4,10 +4,16 @@ set(TEST_INCLUDE_DIRECTORIES
   PARENT_SCOPE
 )
 
+if(${CPU})
+  set(CPU_SOURCE
+    ${CMAKE_CURRENT_SOURCE_DIR}/LapackppHostVectorTest.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/LapackppHostMatrixTest.cpp
+  )
+endif(${CPU})
+
 set(TEST_SOURCE
   ${TEST_SOURCE}
-  ${CMAKE_CURRENT_SOURCE_DIR}/LapackppHostVectorTest.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/LapackppHostMatrixTest.cpp
+  ${CPU_SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/SNPVectorTest.cpp
   PARENT_SCOPE
 )
