--- a/src/container/CMakeLists.txt
+++ b/src/container/CMakeLists.txt
@@ -6,19 +6,28 @@ set(INCLUDE_DIRECTORIES
 
 if(${CPU})
   set(CPU_SOURCE
+    ${CMAKE_CURRENT_SOURCE_DIR}/HostVector.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/HostMatrix.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/LapackppHostVector.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/LapackppHostMatrix.cpp
+  )
+else()
+  set(GPU_SOURCE
+    ${GPU_SOURCE}
+    ${CMAKE_CURRENT_SOURCE_DIR}/HostVector.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/HostMatrix.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/PinnedHostVector.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/PinnedHostMatrix.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/DeviceVector.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/DeviceMatrix.cpp
+    PARENT_SCOPE
   )
 endif(${CPU})
 
 set(SOURCE
   ${SOURCE}
   ${CPU_SOURCE}
-  ${CMAKE_CURRENT_SOURCE_DIR}/HostVector.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/HostMatrix.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/SNPVector.cpp
-  #${CMAKE_CURRENT_SOURCE_DIR}/PinnedHostVector.cpp
-  #${CMAKE_CURRENT_SOURCE_DIR}/PinnedHostMatrix.cpp
   PARENT_SCOPE
 )
 
