Added kernel for logistic transformation. Added class to wrap the kernels. Added test for the kernel. Changed transfer classes to take a stream refrence instead of cublas handle.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,12 @@ add_subdirectory(mocks)
 add_subdirectory(data)
 add_subdirectory(container)
 add_subdirectory(fileIO)
-add_subdirectory(cuda)
+
+if(${CPU})
+
+else()
+  add_subdirectory(cuda)
+endif(${CPU})
 
 set(TEST_INCLUDE_DIRECTORIES
   ${TEST_INCLUDE_DIRECTORIES}
