--- a/test/cuda/kernels/CMakeLists.txt
+++ b/test/cuda/kernels/CMakeLists.txt
@@ -1,15 +1,11 @@
-add_subdirectory(kernels)
-
 set(TEST_INCLUDE_DIRECTORIES
   ${TEST_INCLUDE_DIRECTORIES}
   ${CMAKE_CURRENT_SOURCE_DIR}
   PARENT_SCOPE
 )
 
-
 set(TEST_SOURCE
   ${TEST_SOURCE}
-  ${CMAKE_CURRENT_SOURCE_DIR}/CudaAdapterTest.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/TransferTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/LogitTransformTest.cpp
   PARENT_SCOPE
 )
