Fixed naming misstake of LogisticTransformationTest. Added some error checks to the cuda tests

--- a/test/cuda/kernels/CMakeLists.txt
+++ b/test/cuda/kernels/CMakeLists.txt
@@ -6,6 +6,6 @@ set(TEST_INCLUDE_DIRECTORIES
 
 set(TEST_SOURCE
   ${TEST_SOURCE}
-  ${CMAKE_CURRENT_SOURCE_DIR}/LogitTransformTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/LogisticTransformTest.cpp
   PARENT_SCOPE
 )
